--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+#Database settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://match-cube.cprb3hntz76s.ap-northeast-2.rds.amazonaws.com:3306/match_cube?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=admin12#$
+
+#Mybatis settings
+mybatis.type-aliases-package: com.carnival.matchcube
+mybatis.mapper-locations: classpath:mappers/*Mapper.xml
