--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 #Database settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://match-cube.cprb3hntz76s.ap-northeast-2.rds.amazonaws.com:3306/match_cube?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://match-cube.cprb3hntz76s.ap-northeast-2.rds.amazonaws.com:3306/match_cube?serverTimezone=UTC&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=admin
 spring.datasource.password=admin12#$
+#oauth
+#spring.profiles.include=oauth
+
 
 #Mybatis settings
-mybatis.type-aliases-package: com.carnival.matchcube
-mybatis.mapper-locations: classpath:mappers/*Mapper.xml
+mybatis.type-aliases-package:com.carnival.matchcube
+mybatis.mapper-locations:classpath:mappers/*Mapper.xml
+mybatis.config-location:classpath:mybatis-config.xml
+#Mybatis camelCase
+mybatis.configuration.map-underscore-to-camel-case = true
+#쿼리 결과 필드가 null인 경우, 누락이 되서 나오는데 누락이 안되게 하는 설정
+mybatis.configuration.call-setters-on-nulls:true
+#쿼리에 보내는 파라메터가 null인 경우, 오류 발생하는 것 방지
+mybatis.configuration.jdbc-type-for-null:null
