--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,12 @@ dependencies {
 	compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.3'
-	//compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+	// oauth
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	//testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 test {
