회원가입 추가 회원정보 조회 추가

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,11 @@
-#spring.security.oauth2.client.registration.google.client-id=390402576065-q3ei4pb2k7uti7gda9v2qkonqloviv3q.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=DI1Eh6KobsHURMDd2EYJMV53
-#spring.security.oauth2.client.registration.google.scope=profile,email
+#google oauth2
+spring.security.oauth2.client.registration.google.client-id=390402576065-q3ei4pb2k7uti7gda9v2qkonqloviv3q.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=DI1Eh6KobsHURMDd2EYJMV53
+spring.security.oauth2.client.registration.google.scope=profile,email
+#kakao oauth2
+spring.security.oauth2.client.registration.kakao.client-id=52449b413d05675eed244b6baaceee56
+spring.security.oauth2.client.registration.kakao.client-secret=j2ijWgsNbVfHySxXq9suql4uY7pP47cl
+#naver oauth2
+spring.security.oauth2.client.registration.naver.client-id=zDX_nCtPFtuQFCV4avmi
+spring.security.oauth2.client.registration.naver.client-secret=xGLK4BTMPD
+
