--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,6 @@ spring.datasource.password=admin12#$
 mybatis.type-aliases-package:com.carnival.matchcube
 mybatis.mapper-locations:classpath:mappers/*Mapper.xml
 mybatis.config-location:classpath:mybatis-config.xml
-#Mybatis camelCase
-mybatis.configuration.map-underscore-to-camel-case = true
-#쿼리 결과 필드가 null인 경우, 누락이 되서 나오는데 누락이 안되게 하는 설정
-mybatis.configuration.call-setters-on-nulls:true
-#쿼리에 보내는 파라메터가 null인 경우, 오류 발생하는 것 방지
-mybatis.configuration.jdbc-type-for-null:null
+
+#ouath
+spring.profiles.include=oauth
