--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,12 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.3'
 
-	// oauth
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	//testImplementation 'org.springframework.security:spring-security-test'
+	// oauth, security
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'javax.xml.bind:jaxb-api'
+//	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+//	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
+//	runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 }
 
