--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ mybatis.config-location:classpath:mybatis-config.xml
 
 #ouath
 spring.profiles.include=oauth
+
+#S3 access
+cloud.aws.credentials.access-key:AKIARF3JEWPY55TLODAO
+cloud.aws.credentials.secret-key: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
+
+cloud.aws.credentials.instance-profile:true
+cloud.aws.stack.auto:false
+cloud.aws.region.static:ap-northeast-2
+cloud.aws.s3.bucket:match-cube
