--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,7 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 //	implementation 'javax.xml.bind:jaxb-api'
 //	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-//	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
-//	runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 }
 
