--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,14 @@ spring.profiles.include=oauth
 cloud.aws.credentials.access-key:AKIARF3JEWPY55TLODAO
 cloud.aws.credentials.secret-key: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
 
-cloud.aws.credentials.instance-profile:true
-cloud.aws.stack.auto:false
-cloud.aws.region.static:ap-northeast-2
-cloud.aws.s3.bucket:match-cube
+cloud.aws.credentials.instance-profile=true
+cloud.aws.stack.auto=false
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=match-cube
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+logging.level.com.amazonaws.util.EC2MetadataUtils: error
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=0B
+
